# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "doh"
version = "0.2.8"
description = "Make docker interactive usage less painful"
readme = "README.md"
authors = [
  "Vsevolod Poletaev <poletaev.va _at_ gmail.com>"
]
license = "GNU GPL v3.0"
repository = "https://github.com/hexfaker/doh"
homepage = "https://github.com/hexfaker/doh"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = []  # Update me

include = [
  {path="doh/bin/ssh-server", format="wheel"}
]

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  # Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
"doh" = "doh.__main__:app"


[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.4.1"
pydantic = "^1.7.3"
toml = "^0.10.2"
rich = "^12.3.0"
envtoml = "^0.1.2"
platformdirs = "^2.5.2"

[tool.poetry.dev-dependencies]
darglint = "^1.5.8"
isort = "^5.7.0"
pyupgrade = "^2.7.4"
black = "^22.3.0"
mypy = "^0.950"
bandit = "^1.7.0"
safety = "^1.10.3"
pytest = "^7.1.2"
pylint = "^2.13.7"
pydocstyle = "^6.1.1"
pre-commit = "^2.9.3"
types-toml = "^0.10.6"

[tool.black]
# https://github.com/psf/black
line-length = 80
target-version = ["py37"]

[tool.isort]
# https://github.com/timothycrosley/isort/
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
default_section = "FIRSTPARTY"
multi_line_output = 3
indent = 4
force_grid_wrap = 0
use_parentheses = true
line_length = 80
